Fixed mobile spacing, image gap,overflow issues

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ html {
 }
 html, body {
   overflow-x: hidden;
+  width:100%;
 }
 
 /* PREMIUM BACKGROUND */
@@ -19,6 +20,7 @@ body {
   min-height: 100vh;
 }
 img {
+  display:block;
   max-width: 100%;
   height: auto;
 }
@@ -378,7 +380,7 @@ section {
 .hero{
   position:relative;
   z-index: 1;
-  
+
 }
 
   /* HEADER */
@@ -399,6 +401,8 @@ section {
   }
 
   .main-nav {
+    max-width: 100%;
+    overflow-x: hidden;
     flex-wrap: wrap;
     justify-content: center;
     margin-top: 10px;
@@ -680,8 +684,8 @@ section {
   100% { transform: rotate(360deg); }
 }
 .fade {
-  opacity: 0;
-  transform: translateY(40px);
+  opacity: 1;
+  transform: none;
   transition: all 0.6s ease;
 }
 
@@ -728,6 +732,8 @@ section {
   display: flex;
   align-items: center;
   gap: 30px;
+  padding-bottom: 0;
+  margin-bottom: 0;
 }
 
 /* TEXT */
@@ -740,6 +746,7 @@ section {
   flex: 1;
   display: flex;
   justify-content: flex-end;
+  margin-bottom:0;
 }
 
 .founder-image img {
@@ -991,4 +998,10 @@ body.dark .contact-card {
 .btn-primary:active:after {
   width: 200px;
   height: 200px;
+}
+p{
+  overflow: visible;
+  text-overflow: unset:
+  white-space: normal;
+
 }
